compilation error in stackwalk.cpp on some gccs

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: None
    • Component/s: core-libs
    • b140

      This should be THREAD in the return statement. It gets a compilation error on my version of gcc.

      diff --git a/src/share/vm/prims/stackwalk.cpp b/src/share/vm/prims/stackwalk.cpp
      --- a/src/share/vm/prims/stackwalk.cpp
      +++ b/src/share/vm/prims/stackwalk.cpp
      @@ -331,10 +331,10 @@
           assert (use_frames_array(mode), "Bad mode for get live frame");
           RegisterMap regMap(jt, true);
           LiveFrameStream stream(jt, &regMap);
      - return fetchFirstBatch(stream, stackStream, mode, skip_frames, frame_count, start_index, frames_array, CHECK_NULL);
      + return fetchFirstBatch(stream, stackStream, mode, skip_frames, frame_count, start_index, frames_array, THREAD);
         } else {
           JavaFrameStream stream(jt, mode);
      - return fetchFirstBatch(stream, stackStream, mode, skip_frames, frame_count, start_index, frames_array, CHECK_NULL);
      + return fetchFirstBatch(stream, stackStream, mode, skip_frames, frame_count, start_index, frames_array, THREAD);
         }
       }

            Assignee:
            Brent Christian
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: