8166501: compilation error in stackwalk.cpp on some gccs

Reviewed-by: coleenp